# webshot_app

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: exceptions.py  logger.py  webshot_driver.py  webshot_processor.py
db/: constants.py  crud.py  db.py  models.py  schemas.py
