[tool.poetry]
name = "webshot"
version = "0.1.0"
description = "A python web service that takes screenshots of websites"
authors = ["Mihaela Stoycheva <mihaela.stoycheva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.103.2"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
selenium = "^4.14.0"
chromedriver = "^2.24.1"
sqlalchemy = "^2.0.22"
apscheduler = "^3.10.4"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "23.9.1"
mypy = "1.5.1"

[tool.black]
line_length = 90
target_version = ['py310']

[tool.mypy]
python_version = "3.10"
strict_optional = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"